--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -1,14 +1,20 @@
-<div style="width: 100%; display: flex; justify-content: flex-end;">
-  <h2 style="width: 100%">{{ "PRODUCTS_PAGE_TITLE" | translate }}</h2>
-  <div style="display:flex; justify-content: flex-end;">
-      <button mat-raised-button color="primary"><mat-icon>add</mat-icon> <span class="button-text">{{"NEW_PRODUCT_BUTTON" | translate}}</span></button>
-      <button mat-raised-button color="warn" disabled><mat-icon>delete</mat-icon> <span class="button-text">{{"REMOVE_PRODUCT_BUTTON" | translate}}</span></button>
-  </div>
+<div class="list__header">
+  <h2>{{ "PRODUCTS_PAGE_TITLE" | translate }}</h2>
+  <app-actionbar></app-actionbar>
 </div>
-<app-search-bar></app-search-bar>
-<app-toolbar></app-toolbar>
-<app-panel layout="grid">
-  <div *ngFor="let product of (products | async)" style="background-color: antiquewhite">
-    {{product.id}}
-  </div>
-</app-panel>
+
+<div class="list__toolbars">
+  <app-search-bar></app-search-bar>
+
+  <app-toolbar></app-toolbar>
+</div>
+
+<div class="list__items">
+  <app-panel layout="grid">
+    <ng-container *ngFor="let product of (products | async)">
+      <app-card [product]="product" [fields]="['title', 'category','description', 'employee', 'price']" layout="card"></app-card>
+    </ng-container>
+  </app-panel>
+
+  <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page" ></mat-paginator>
+</div>
