--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <a routerLink="/">
     <span id="storeName" aria-label="Store name">{{ storeName }}</span>
   </a>
   <span class="spacer"></span>
-  <button>
-    <mat-icon>person</mat-icon>
+  <button mat-icon-button color="primary" style="color: white">
+    <mat-icon >person</mat-icon>
   </button>
 </mat-toolbar>
