feature - detail component structure and routing

--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -11,8 +11,9 @@
 
 <div class="list__items">
   <app-panel layout="grid">
-    <ng-container *ngFor="let product of (products | async)">
+    <ng-container *ngFor="let product of (products$ | async)">
       <app-card [product]="product" [fields]="['title', 'category','description', 'employee', 'price']" layout="card"></app-card>
+      <span>{{product.id}}</span>
     </ng-container>
   </app-panel>
 
