--- a/src/app/features/detail/detail.component.html
+++ b/src/app/features/detail/detail.component.html
@@ -1,31 +1,35 @@
 <form [formGroup]="form" (ngSubmit)="submit()" (reset)="reset()">
   <div>
-    <input [formControlName]="'title'" />
+    <label for="title">{{'TITLE_LABEL' | translate }}</label>
+    <input id="title" [formControlName]="'title'" />
   </div>
   <div>
-    <input [formControlName]="'category'" />
+    <label for="category">{{'CATEGORY_LABEL' | translate }}</label>
+    <input id="category" [formControlName]="'category'" />
   </div>
   <div>
-    <input [formControlName]="'price'" />
+    <label for="price">{{'PRICE_LABEL' | translate }}</label>
+    <input id="price" type="number" [formControlName]="'price'" />
   </div>
   <div>
-    <textarea [formControlName]="'description'"></textarea>
-    <mat-select [formControlName]="'employee'">
+    <label for="description">{{'DESCRIPTION_LABEL' | translate }}</label>
+    <textarea id="description" [formControlName]="'description'" rows="5"></textarea>
+  </div>
+  <div>
+    <label for="employee">{{'EMPOLOYEE_LABEL' | translate }}</label>
+    <mat-select class="select" id="employee" [formControlName]="'employee'">
       <mat-option *ngFor="let employee of employees" [value]="employee">
         {{employee}}
       </mat-option>
     </mat-select>
   </div>
-  <div>
+  <div *ngIf="mode !== 'C' && product?.reviews?.length !== 0 ">
     <mat-accordion>
       <mat-expansion-panel hideToggle>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            This is the expansion title
+            {{'REVIEWS_ACCORDION_TITLE' | translate }}
           </mat-panel-title>
-          <mat-panel-description>
-            This is a summary of the content
-          </mat-panel-description>
         </mat-expansion-panel-header>
         <div>
           <div *ngFor="let comment of form.controls['reviews']?.value">
@@ -35,8 +39,8 @@
       </mat-expansion-panel>
     </mat-accordion>
   </div>
-  <div>
-    <button type="submit">Salva</button>
-    <button type="reset">Resetta</button>
+  <div class="detail__actions">
+    <button mat-raised-button color="primary" type="submit">{{'SAVE_BUTTON' | translate }}</button>
+    <button *ngIf="mode !== 'C'" mat-raised-button color="warn" type="reset">{{'REMOVE_PRODUCT_BUTTON' | translate }}</button>
   </div>
 </form>
