--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,31 @@ a:visited {
 .button-text {
   font-size: 1rem;
 }
+
+label {
+  font-size: 1.1rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+input, textarea, select {
+  width: 100%;
+  border-radius: 5px;
+  padding: 0.5rem;
+  font-size: 1.1rem;
+  background: #f3f3f3 ;
+}
+
+input::placeholder, textarea::placeholder {
+  opacity: 0.5;
+}
+
+input:focus, textarea:focus {
+  background: #f3f3f3;
+  border: 1px solid #dedede;
+}
+
+input:disabled, textarea:disabled {
+  background: none;
+  border: 1px solid #dedede;
+}
