--- a/src/app/features/list/components/search-bar/search-bar.component.html
+++ b/src/app/features/list/components/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
   <div class="searchbar">
     <input matInput #inputSearch (keydown.enter)="searchButton._elementRef.nativeElement.click()"
            type="search" placeholder="Search Product" [(ngModel)]="value" />
-    <button #searchButton mat-button (click)="searchEvnt(inputSearch.value)"><mat-icon>search</mat-icon></button>
+    <button #searchButton mat-button (click)="searchEvent(inputSearch.value)"><mat-icon>search</mat-icon></button>
   </div>
