--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="list__toolbars">
-  <app-search-bar></app-search-bar>
+  <app-search-bar (search)="searchTxt($event)"></app-search-bar>
 
   <app-toolbar></app-toolbar>
 </div>
@@ -13,9 +13,9 @@
   <app-panel layout="grid">
     <ng-container *ngFor="let product of (products$ | async)">
       <app-card [product]="product" [fields]="['title', 'category','description', 'employee', 'price']" layout="card"></app-card>
-      <span>{{product.id}}</span>
+
     </ng-container>
   </app-panel>
 
-  <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page" ></mat-paginator>
+  <mat-paginator (page)="paginator($event)" [length]="page.length" [pageSize]="page.pageSize" [pageSizeOptions]="[5, 10, 25, 50]" aria-label="Select page" ></mat-paginator>
 </div>
