--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -6,13 +6,13 @@
 <div class="list__toolbars">
   <app-search-bar (search)="searchTxt($event)"></app-search-bar>
 
-  <app-toolbar></app-toolbar>
+  <app-toolbar #toolbar [(layout)]="layout" ></app-toolbar>
 </div>
 
 <div class="list__items">
-  <app-panel layout="grid">
+  <app-panel [layout]="layout">
     <ng-container *ngFor="let product of (products$ | async)">
-      <app-card [product]="product" [fields]="['title', 'category','description', 'employee', 'price']" layout="card"></app-card>
+      <app-card [product]="product" [fields]="toolbar.data" [layout]="layout"></app-card>
 
     </ng-container>
   </app-panel>
