--- a/src/app/features/list/components/card/card.component.html
+++ b/src/app/features/list/components/card/card.component.html
@@ -14,16 +14,21 @@
       <strong>{{"PRICE_LABEL" | translate}}: </strong><span>{{product?.data?.price | currency:'EUR':'symbol':'1.2-2'}}</span>
     </div>
   </mat-card-content>
-  <mat-card-actions align="end">
-    <button mat-button color="primary">{{"VIEW_BUTTON" | translate | uppercase}}</button>
-    <button mat-button color="warn"><span>{{"REMOVE_PRODUCT_BUTTON" | translate | uppercase}}</span></button>
+  <mat-card-actions style="display: flex">
+    <div>
+      <mat-checkbox [checked]="checked" (change)="checkId()"></mat-checkbox>
+    </div>
+    <div style="flex-grow: 1; text-align: end">
+      <a [routerLink]="['detail', product?.id]" mat-button color="primary">{{"VIEW_BUTTON" | translate | uppercase}}</a>
+      <button mat-button color="warn" (click)="deleteEl()"><span>{{"REMOVE_PRODUCT_BUTTON" | translate | uppercase}}</span></button>
+    </div>
   </mat-card-actions>
 </mat-card>
 
 <ng-template #row>
   <div class="row">
     <div class="row__checkbox">
-      <mat-checkbox></mat-checkbox>
+      <mat-checkbox [checked]="checked" (change)="checkId()"></mat-checkbox>
     </div>
     <div class="row__header" *ngIf="isInFields('title') || isInFields('category')" [ngClass]="{'row__header--fullwidth': !isInFields('description') && !isInFields('employee')}">
       <span class="row__title" *ngIf="isInFields('title')"><strong>{{product?.data?.title }}</strong></span>
@@ -41,8 +46,8 @@
       <strong>{{"PRICE_LABEL" | translate}} </strong><span>{{product?.data?.price | currency:'EUR':'symbol':'1.2-2'}}</span>
     </div>
     <div class="row__actions">
-      <button mat-button color="primary">{{"VIEW_BUTTON" | translate | uppercase}}</button>
-      <button mat-button color="warn"><span>{{"REMOVE_PRODUCT_BUTTON" | translate | uppercase}}</span></button>
+      <a [routerLink]="['detail', product?.id]" mat-button color="primary">{{"VIEW_BUTTON" | translate | uppercase}}</a>
+      <button mat-button (click)="deleteEl()" color="warn"><span>{{"REMOVE_PRODUCT_BUTTON" | translate | uppercase}}</span></button>
     </div>
   </div>
 </ng-template>
