--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -12,8 +12,7 @@
 <div class="list__items">
   <app-panel [layout]="layout">
     <ng-container *ngFor="let product of (products$ | async)">
-      <app-card [product]="product" [fields]="toolbar.data" [layout]="layout"></app-card>
-
+      <app-card [product]="product" [fields]="toolbar.data" [layout]="layout" (delete)="this.deleteProduct($event)"></app-card>
     </ng-container>
   </app-panel>
 
