feature - detail title

--- a/src/app/features/detail/detail.component.css
+++ b/src/app/features/detail/detail.component.css
@@ -1,6 +1,15 @@
 :host {
   width: 100%;
-  display: flex;
+}
+
+.detail__header {
+  margin-top: 2rem;
+  width: 100%;
+  font-weight: light;
+}
+
+.detail__header a {
+  text-decoration: underline;
 }
 
 form {
