feature - detail remove action

--- a/src/app/features/detail/detail.component.html
+++ b/src/app/features/detail/detail.component.html
@@ -4,7 +4,7 @@
   </div>
   <div>
 
-    <form [formGroup]="form" (ngSubmit)="submit()" (reset)="reset()">
+    <form [formGroup]="form" (ngSubmit)="submit()">
       <div>
         <label for="title">{{'TITLE_LABEL' | translate }}</label>
         <input id="title" [formControlName]="'title'" />
@@ -47,7 +47,7 @@
       </div>
       <div class="detail__actions">
         <button mat-raised-button color="primary" type="submit">{{'SAVE_BUTTON' | translate }}</button>
-        <button *ngIf="mode !== 'C'" mat-raised-button color="warn" type="reset">{{'REMOVE_PRODUCT_BUTTON' | translate }}</button>
+        <button *ngIf="mode !== 'C'" mat-raised-button color="warn" type="button" (click)="delete()">{{'REMOVE_PRODUCT_BUTTON' | translate }}</button>
       </div>
     </form>
   </div>
