--- a/src/app/features/list/list.component.css
+++ b/src/app/features/list/list.component.css
@@ -1,3 +1,8 @@
+.list {
+  display: flex;
+  flex-direction: column;
+}
+
 .list__header {
   margin-top: 2rem;
   width: 100%;
@@ -7,4 +12,13 @@
 
 .list__header h2 {
   width: 100%;
+}
+
+.list__spinner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
