--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -1,20 +1,26 @@
-<div class="list__header">
-  <h2>{{ "PRODUCTS_PAGE_TITLE" | translate }}</h2>
-  <app-actionbar></app-actionbar>
-</div>
+<div class="list">
+  <div class="list__header">
+    <h2>{{ "PRODUCTS_PAGE_TITLE" | translate }}</h2>
+    <app-actionbar></app-actionbar>
+  </div>
 
-<div class="list__toolbars">
-  <app-search-bar (search)="searchTxt($event)"></app-search-bar>
+  <div class="list__toolbars">
+    <app-search-bar (search)="searchTxt($event)"></app-search-bar>
 
-  <app-toolbar #toolbar [(layout)]="layout" ></app-toolbar>
-</div>
+    <app-toolbar #toolbar [(layout)]="layout" ></app-toolbar>
+  </div>
 
-<div class="list__items">
-  <app-panel [layout]="layout">
-    <ng-container *ngFor="let product of (products$ | async)">
-      <app-card [product]="product" [fields]="toolbar.data" [layout]="layout" (delete)="this.deleteProduct($event)"></app-card>
-    </ng-container>
-  </app-panel>
+  <div class="list__items">
+    <app-panel [layout]="layout">
+      <ng-container *ngFor="let product of (products$ | async)">
+        <app-card [product]="product" [fields]="toolbar.data" [layout]="layout" (delete)="this.deleteProduct($event)"></app-card>
+      </ng-container>
+    </app-panel>
 
-  <mat-paginator (page)="paginator($event)" [length]="page.length" [pageSize]="page.pageSize" [pageSizeOptions]="[5, 10, 25, 50]" aria-label="Select page" ></mat-paginator>
+    <mat-paginator (page)="paginator($event)" [length]="page.length" [pageSize]="page.pageSize" [pageSizeOptions]="[5, 10, 25, 50]" aria-label="Select page" ></mat-paginator>
+  </div>
+
+  <div class="list__spinner">
+    <mat-spinner *ngIf="spinner"></mat-spinner>
+  </div>
 </div>
