--- a/src/app/features/list/components/chart/chart.component.html
+++ b/src/app/features/list/components/chart/chart.component.html
@@ -1,1 +1,13 @@
-<p>chart works!</p>
+<div class="chart" *ngIf="!spinner">
+  <canvas baseChart
+          [datasets]="polarAreaChartDatasets"
+          [labels]="polarAreaChartLabels"
+          [legend]="polarAreaLegend"
+          [options]="polarAreaOptions"
+          [type]="'polarArea'">
+  </canvas>
+</div>
+
+<div *ngIf="spinner">
+  <mat-spinner></mat-spinner>
+</div>
